k8s/charts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codepod-ingress
spec:
  rules:
    - host: codepod2.127.0.0.1.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: codepod-ui-service
                port:
                  number: 8080
    - host: codepod.127.0.0.1.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: codepod-ui-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: codepod-api-service
                port:
                  number: 4000
          - path: /runtime
            pathType: Prefix
            backend:
              service:
                name: codepod-runtime-service
                port:
                  number: 4001
          - path: /yjs
            pathType: Prefix
            backend:
              service:
                name: codepod-yjs-service
                port:
                  number: 4233
    # Or use kubectl port forwarding
    # kubectl port-forward svc/prisma-service 8080:80
    - host: prisma.127.0.0.1.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prisma-service
                port:
                  number: 80
